# 4cs

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md
research/: HANDOFF.md  README.md  pyproject.toml
research/fourcs/: book.py  lines.py  orders.py  probs.py  replay.py  tape.py  verify.py  writers.py
research/jobs/: build_book.py  build_features.py  build_grid.py  build_order_events.py  build_targets.py  eval_ic.py
research/sql/: coverage.sql  move_census.sql  overround_dist.sql
research/tests/: test_book.py  test_lines.py  test_orders.py  test_probs.py  test_replay.py
src/: activity.ts  cli.ts  daemon.ts  env.ts  ipc.ts  log.ts  state.ts
src/api/: config.ts  rest.ts  types.ts
src/api/stream/: feed.ts  priceFeed.ts  reducer.ts  tape.ts
src/lib/: hedge.ts  leagues.ts  marketLines.ts  odds.ts  orderDedupe.ts  orderFormat.ts  orderGuards.ts  orderStateMachine.ts  orderValidation.ts  payout.ts  priceMove.ts
src/positions/: diff.ts  normalize.ts  types.ts
src/scheduler/: pollScheduler.ts
src/types/: trading.ts
systemd/: 4caster-daemon.service.example
test/: diff.test.mjs  helpers.mjs  libs.test.mjs  marketLines.test.mjs  normalize.test.mjs  priceMove.test.mjs  streamReducer.test.mjs
