[project]
name = "fourcs-research"
version = "0.1.0"
description = "Line-movement research layer for the 4casters tape (replay, features, IC evaluation)"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=16",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
plots = ["matplotlib>=3.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fourcs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
